gitops-repo/analytics-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  labels:
    app: analytics-service
spec:
  type: ClusterIP
  selector:
    app: analytics-service
  ports:
    - port: 8005
      targetPort: 8005
      protocol: TCP
